--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,25 +7,27 @@
       <button class="hero-btn" type="button">shop<br />now</button>
     </div>
     <div class="hero-cards">
-      <p class="card-text">
-        Our expertly curated fruit baskets are made with the freshest, highest
-        quality fruits available. Whether you are looking for a healthy snack or
-        a gift for a loved one, Fresh Harvest Box has got you covered.
-      </p>
-      <div class="top-card">
-        <h3 class="top-card-text">Fruit</h3>
-        <div class="thamb-hero">
-          <img
-            class="hero-img"
-            src="/img/hero/nwatermelon-mob@1.png"
-            width="200"
-            height="172"
-          />
-        </div>
-        <p class="low-card-text">
-          Refreshing and juicy, watermelon is the perfect summer treat and a
-          great source of hydration
+      <div class="wrap-cards">
+        <p class="card-text">
+          Our expertly curated fruit baskets are made with the freshest, highest
+          quality fruits available. Whether you are looking for a healthy snack
+          or a gift for a loved one, Fresh Harvest Box has got you covered.
         </p>
+        <div class="top-card">
+          <h3 class="top-card-text">Fruit</h3>
+          <div class="thamb-hero">
+            <img
+              class="hero-img"
+              src="/img/hero/nwatermelon-mob@1.png"
+              width="239"
+              height="172"
+            />
+            <p class="low-card-text">
+              Refreshing and juicy, watermelon is the perfect summer treat and a
+              great source of hydration
+            </p>
+          </div>
+        </div>
       </div>
       <div class="tag-list">
         <ul class="tags">
@@ -37,18 +39,21 @@
 
         <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
-          <img
-            class="hero-img"
-            src="../img/hero/strawberrybox-mob@1.png"
-            width="162"
-            height="185"
-          />
-          <p class="low-card-text">
-            Sweet and juicy, strawberries are packed with vitamin C and
-            antioxidants, making them a delicious and healthy snack
-          </p>
+          <div class="wrap-cards">
+            <img
+              class="hero-img hero-imglow"
+              src="../img/hero/strawberrybox-mob@1.png"
+              width="239"
+              height="187"
+            />
+            <p class="low-card-text">
+              Sweet and juicy, strawberries are packed with vitamin C and
+              antioxidants, making them a delicious and healthy snack
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- </div> -->
 </section>
